Small corrections on the about page spacing for mobile devices.

--- a/body-style.css
+++ b/body-style.css
@@ -437,7 +437,6 @@ body {
 
     .text-revealer {
         align-self: center;
-        margin-top: 30px;
     }
     
     .about-par {
